# Phraims

./: .gitignore  AGENTS.md  AppSettings.h  CMakeLists.txt  DomPatch.cpp  DomPatch.h  EscapeFilter.cpp  EscapeFilter.h  MODULARIZATION_SUMMARY.md  MacSparkleUpdater.h  MacSparkleUpdater.mm  MyWebEnginePage.h  MyWebEngineView.cpp  MyWebEngineView.h  README.md  SparkleUpdater.h  SparkleUpdater.mm  SplitFrameWidget.cpp  SplitFrameWidget.h  SplitWindow.cpp  SplitWindow.h  SplitterDoubleClickFilter.h  UpdateChecker.cpp  UpdateChecker.h  UpdateConfig.h  UpdateConfig.h.in  UpdateDialog.cpp  UpdateDialog.h  Utils.cpp  Utils.h  WinSparkleUpdater.cpp  WinSparkleUpdater.h  WindowsUpdater.cpp  WindowsUpdater.h  dotqtmacos.txt  generate_ico.py  icons.sh  main.cpp  main_new.cpp  version.h.in
.github/: copilot-instructions.md
.github/workflows/: build-macos.yml  build-phraims-macos.yml  build-phraims-macos.yml.disabled  build-phraims-windows.yml  build-phraims.yml  build-qtwebengine-macos.yml  build-qtwebengine-windows.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  Phraim  cmake_install.cmake
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/.qt/deploy_qml_imports/: Phraim.cmake
_codeql_build_dir/.qt_plugins/: Qt6_QmlPlugins_Imports_Phraim.rsp
_codeql_build_dir/Phraim_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/Phraim_autogen/EWIEGA46WW/: moc_DomPatch.cpp  moc_DomPatch.cpp.d  moc_EscapeFilter.cpp  moc_EscapeFilter.cpp.d  moc_MyWebEngineView.cpp  moc_MyWebEngineView.cpp.d  moc_SplitFrameWidget.cpp  moc_SplitFrameWidget.cpp.d  (+2 more)
ci/: build-local-macos.sh  build-phraims-macos.sh  build-phraims-windows.ps1  build-qtwebengine-macos.sh  build-qtwebengine-windows.ps1  generate-appcast.sh  generate-version-manifest.sh  get-qtwebengine-macos.sh  get-qtwebengine-windows.ps1
resources/: Info.plist.in  phraim.icns  phraims.icns  phraims.rc.in  resources.qrc
